# tensorflow-hooks

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci_tests.yaml  pre_commit_checks.yaml  release.yaml
src/tf_hooks/: __init__.py  cleanup.py  register.py
tests/: test_cleanup.py  test_hooks.py  test_registration.py  test_scenarios.py  utils.py
tf_hooks/: __init__.py  constants.py  hooks.py  register.py
